Fix hamburger menu not opening navbar on mobile
The hamburger menu on other pages apart from the homepage page was not
opening the navigation bar when clicked on mobile devices. This commit
fixes the issue by importing the necessary files to the HTML files for
the pages.

This commit also fixed the issue with the page reloading when an anchor
link is clicked because necessary files have been imported in the other
pages.

Fixes #19, #9

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,16 +129,10 @@ img {
   margin-top: 96px;
 }
 
-/* navbar */
-nav {
-  position: relative !important;
+/* logo image */
+.logo img {
+  vertical-align: unset;
 }
-
-nav.light {
-  background-color: var(--white);
-}
-
-
 
 /* ** Products Page ** */
 /* Path: /products/index.html */
@@ -375,7 +369,7 @@ nav.light {
 .swiper {
   width: 100%;
   height: 100%;
-  margin-top: 7rem;
+  margin-top: 10rem;
 }
 
 .swiper-wrapper {
@@ -404,16 +398,15 @@ nav.light {
 }
 
 /* Slide on /products/ */
-header {
+.header {
   position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  margin-top: -3.1rem;
 }
 
 @media (max-width: 768px) {
-  header {
+  .header {
     height: 50vh;
   }
 }
