--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ nav.light .animate-logo svg path {
   nav .row .left-nav {
     width: 100%;
     height: 3.7em;
-    padding-top: 0.7em;
+    padding-top: 1.75rem;
   }
 
   main.nav-active nav.light .animate-logo svg path,
